--- a/webapp/ember/bower.json
+++ b/webapp/ember/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-      "bootstrap": "3.2.0"
+      "bootstrap": "3.2.0",
+      "less": "1.7.3",
+      "ember": "1.6.0"
   }
 }
