--- a/webapp/angular/bower.json
+++ b/webapp/angular/bower.json
@@ -17,6 +17,9 @@
   "dependencies": {
       "bootstrap": "~3.2.0",
       "less": "1.7.3",
-      "angular": "~1.2.25"
+      "angular": "~1.2.25",
+      "jssha": "~1.5.0",
+      "angular-local-storage": "~0.1.0",
+      "angular-route": "~1.2.26"
   }
 }
