--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 Django==1.6.5
+Flask==0.10.1
+Flask-Cors==1.9.0
+Jinja2==2.7.3
+MarkupSafe==0.23
+MySQL-python==1.2.5
+Werkzeug==0.9.6
 argparse==1.2.1
 djangorestframework==2.3.13
+itsdangerous==0.24
+six==1.8.0
 wsgiref==0.1.2
